# FoCS-OCaml-Work

./: .gitignore
setup/: hello.ml  main.ml
setup/test/_build/: .digest-db  log
setup/test/_build/default/: test.dune-package
supervision1/local/_build/: log
supervision1/local/f_p_imprecision/: dune-project
supervision1/local/f_p_imprecision/lib/: dune
supervision1/local/f_p_imprecision/test/: dune
supervision1/local/lists/: dune-project
supervision1/local/lists/test/: dune
supervision1/local/rec_iter/: dune-project
supervision1/local/rec_iter/lib/: dune
supervision1/local/rec_iter/test/: dune
supervision1/local/representations/: dune-project
supervision1/local/representations/_build/: .db  .digest-db  log
supervision1/local/representations/lib/: dune  fourDigit.ml  fourDigit.mli  twoDigit.ml
supervision1/local/representations/test/: dune
supervision1/online/: representations.ipynb
supervision2/: Supervision 2 Prep Work.docx
supervision2/local/arrays/lib/: dune
supervision2/local/datatypes/: dune-project
supervision2/local/datatypes/test/: dune
supervision2/local/more_lists/lib/: dune
supervision2/local/more_lists/test/: dune
supervision2/local/optional/: dune-project
supervision2/local/sorting/: dune-project
supervision2/local/trees/: dune-project
supervision2/local/trees/test/: dune
supervision3/local/arrays/: dune-project
supervision3/local/lazy/: dune-project
supervision3/local/more_lists/: dune-project
supervision3/local/val_funcs/: dune-project
test/: dune-project
test/_build/: .db  log
(+58 files in other folders)
